--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
+fastapi = "*"
 gunicorn = "*"
+uvicorn = "*"
 
 [requires]
 python_version = "3"
