--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,23 @@
 [tool.poetry]
 name = "wechat-verify"
-version = "1.0.0"
+version = "1.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Waket Zheng <waketzheng@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-fastapi = "^0.63.0"
-gunicorn = "^20.0.4"
-uvicorn = "^0.13.4"
-uvloop = "^0.15.2"
-httptools = "^0.1.1"
+fastapi = "^0.112.2"
+gunicorn = "^23.0.0"
+uvicorn = "^0.30.6"
+uvloop = "^0.20.0"
+httptools = "^0.6.1"
+fastapi-cdn-host = "^0.7.6"
 
 [tool.poetry.dev-dependencies]
+fast-dev-cli = {version=">=0.9.0", python=">=3.10"}
+
+[tool.poetry.group.dev.dependencies]
+fastapi-cli = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
